# dmiti

./: .gitignore  README.md  demo.py  package-lock.json  package.json  pyproject.toml
backend/: api.py  pyproject.toml
backend/src/: __init__.py
backend/src/integer/: abs_z_n.py  add_zz_z.py  base_integer.py  div_zz_z.py  mod_zz_z.py  mul_zm_z.py  mul_zz_z.py  poz_z_d.py  sub_zz_z.py  trans_z_n.py
backend/src/natural/: __init__.py  add_1n_n.py  base.py  (+14 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.scss  App.tsx  index.module.scss
scripts/: run_dev.py
src/integer/: __init__.py  abs_z_n.py  add_zz_z.py  base_integer.py  div_zz_z.py  mul_zm_z.py  mul_zz_z.py  poz_z_d.py  sub_zz_z.py  trans_n_z.py  trans_z_n.py
src/natural/: __init__.py  add_1n_n.py  add_nn_n.py  arithmetic.py  base.py  com_nn_d.py  comparison.py  div_nn_dk.py  div_nn_n.py  division.py  gcd_lcm.py  gcf_nn_n.py  lcm_nn_n.py  mod_nn_n.py  mul_nd_n.py  mul_nk_n.py  mul_nn_n.py  multiplication.py  nzer_n_b.py  sub_ndn_n.py  sub_nn_n.py  trans_n_z.py
src/polynomial/: __init__.py  add_pp_p.py  base_polynomial.py  deg_p_n.py  der_p_p.py  div_pp_p.py  fac_p_q.py  gcf_pp_p.py  led_p_q.py  mul_pp_p.py  mul_pq_p.py  mul_pxk_p.py  nmr_p_p.py  sub_pp_p.py
src/rational/: __init__.py  base_rational.py  div_qq_q.py  int_q_b.py  mul_qq_q.py  trans_z_q.py
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
tests/integer/: test_integer.py
tests/natural/: test_natural.py
tests/polynomial/: test_polynomial.py
tests/rational/: test_rational.py
(+81 files in other folders)
