[tool.poetry]
name = "src"
version = "0.1.0"
description = "Computer Algebra System"
authors = ["Team LETI"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
